--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,75 @@
+name: Build APK
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: debian-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build APK
-        uses: digreatbrian/buildozer-action@v2
-        with:
-          python-version: 3.12
-          buildozer-cmd: buildozer -v android debug
+    runs-on: ubuntu-latest
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: package
-          path: ./bin/*.apk
+    steps:
+    # Checkout the code from your repository
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # Set up Python environment
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    # Install system dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          build-essential \
+          libffi-dev \
+          libssl-dev \
+          python3-dev \
+          python3-venv \
+          python3-pip \
+          git \
+          zip \
+          unzip \
+          openjdk-11-jdk
+
+    # Install Buildozer
+    - name: Install Buildozer
+      run: |
+        pip install --upgrade pip
+        pip install buildozer
+
+    # Set up Android SDK and NDK
+    - name: Install Android SDK
+      run: |
+        mkdir -p ~/.buildozer/android/platform
+        curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -o cmdline-tools.zip
+        unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/
+        mv ~/.buildozer/android/platform/cmdline-tools ~/.buildozer/android/platform/tools
+        yes | ~/.buildozer/android/platform/tools/bin/sdkmanager --licenses
+        ~/.buildozer/android/platform/tools/bin/sdkmanager \
+          "platform-tools" \
+          "platforms;android-31" \
+          "build-tools;31.0.0" \
+          "ndk;21.3.6528147"
+
+    # Build the APK
+    - name: Build the APK
+      run: |
+        buildozer android debug
+      env:
+        ANDROIDSDK: ~/.buildozer/android/platform/tools/bin
+        ANDROIDNDK: ~/.buildozer/android/platform/android-ndk-r21e
+
+    # Upload the APK to GitHub Artifacts
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: MyApp
+        path: bin/*.apk
