--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,18 +15,22 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10  # Ensure this is the correct version
-
+      # Step 2: Install Python 3.10 explicitly
+      - name: Install Python 3.10
+        run: |
+          sudo apt update
+          sudo apt install -y python3.10 python3.10-venv python3.10-dev python3-pip
+          python3.10 --version
+          sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1
+          sudo update-alternatives --set python3 /usr/bin/python3.10
+          python3 --version
+          
       # Step 3: Install Buildozer and Dependencies
       - name: Install Buildozer and Dependencies
         run: |
-          sudo apt update
-          sudo apt install -y python3 python3-pip python3-venv build-essential git zlib1g-dev libncurses5-dev libgdbm-dev \
-                              libnss3-dev libssl-dev libsqlite3-dev libreadline-dev libffi-dev curl libbz2-dev openjdk-11-jdk
+          sudo apt install -y build-essential git zlib1g-dev libncurses5-dev libgdbm-dev \
+                              libnss3-dev libssl-dev libsqlite3-dev libreadline-dev libffi-dev curl \
+                              libbz2-dev openjdk-11-jdk
           pip install --upgrade pip
           pip install buildozer
 
