--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,13 +24,13 @@ jobs:
           sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1
           sudo update-alternatives --set python3 /usr/bin/python3.10
           python3 --version
-          
-      # Step 3: Install Buildozer and Dependencies
-      - name: Install Buildozer and Dependencies
+
+      # Step 3: Install essential tools and Buildozer dependencies
+      - name: Install Essential Tools and Buildozer Dependencies
         run: |
           sudo apt install -y build-essential git zlib1g-dev libncurses5-dev libgdbm-dev \
                               libnss3-dev libssl-dev libsqlite3-dev libreadline-dev libffi-dev curl \
-                              libbz2-dev openjdk-11-jdk
+                              libbz2-dev openjdk-11-jdk mkdir unzip
           pip install --upgrade pip
           pip install buildozer
 
