--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,15 @@ jobs:
           pip install --upgrade pip
           pip install buildozer
 
-      # Step 4: Install Android SDK
+      # Step 4: Check if mkdir is available and install SDK
+      - name: Check mkdir command
+        run: |
+          which mkdir || echo "mkdir command not found"
+          mkdir -p ~/.buildozer/android/platform
+
+      # Step 5: Install Android SDK
       - name: Install Android SDK
         run: |
-          mkdir -p ~/.buildozer/android/platform
           curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -o cmdline-tools.zip
           unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/
           mkdir -p ~/.buildozer/android/platform/cmdline-tools/latest
@@ -52,7 +57,7 @@ jobs:
           ANDROID_HOME: ~/.buildozer/android/platform
           PATH: $PATH:~/.buildozer/android/platform/cmdline-tools/latest/bin:~/.buildozer/android/platform/tools
 
-      # Step 5: Build the APK
+      # Step 6: Build the APK
       - name: Build APK
         run: |
           buildozer android debug
@@ -60,7 +65,7 @@ jobs:
           ANDROID_HOME: ~/.buildozer/android/platform
           PATH: $PATH:~/.buildozer/android/platform/cmdline-tools/latest/bin:~/.buildozer/android/platform/tools
 
-      # Step 6: Upload APK as an Artifact
+      # Step 7: Upload APK as an Artifact
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
