--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential git zlib1g-dev libncurses5-dev libgdbm-dev \
           libnss3-dev libssl-dev libsqlite3-dev libreadline-dev libffi-dev curl \
-          libbz2-dev openjdk-11-jdk mkdir unzip
+          libbz2-dev openjdk-11-jdk unzip
         pip install --upgrade pip
         pip install buildozer
 
