--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -o cmdline-tools.zip
         unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/
         mkdir -p ~/.buildozer/android/platform/cmdline-tools/latest
+        # Check if cmdline-tools folder has been extracted, and only move contents if needed
         mv ~/.buildozer/android/platform/cmdline-tools/* ~/.buildozer/android/platform/cmdline-tools/latest/
         yes | ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager --licenses
         ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager \
