--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,42 +1,82 @@
-name: Build APK
+name: Build Android APK
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-24.04  # Change the Linux version here
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      # Step 1: Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential git zlib1g-dev libncurses5-dev libgdbm-dev \
-          libnss3-dev libssl-dev libsqlite3-dev libreadline-dev libffi-dev curl \
-          libbz2-dev unzip openjdk-11-jdk
-        pip install --upgrade pip
-        pip install buildozer
+      # Step 2: Set up Python
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-    - name: Install Android SDK
-      run: |
-        mkdir -p ~/.buildozer/android/platform
-        curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -o cmdline-tools.zip
-        unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/
-        mkdir -p ~/.buildozer/android/platform/cmdline-tools/latest
-        # Move all contents of cmdline-tools into latest/ folder, without moving the 'latest' folder itself
-        mv ~/.buildozer/android/platform/cmdline-tools/* ~/.buildozer/android/platform/cmdline-tools/latest/
-        yes | ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager --licenses
-        ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager \
-          "platform-tools" \
-          "platforms;android-31" \
-          "build-tools;31.0.0" \
-          "ndk;21.3.6528147"
+      # Step 3: Install dependencies
+      - name: Install Buildozer dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential \
+            libssl-dev \
+            libffi-dev \
+            python-dev \
+            python3-dev \
+            zip \
+            unzip \
+            openjdk-8-jdk \
+            libncurses5-dev \
+            libstdc++6 \
+            zlib1g-dev \
+            liblzma-dev \
+            pkg-config \
+            libssl-dev \
+            libsqlite3-dev \
+            libbz2-dev \
+            libreadline-dev \
+            libxml2-dev \
+            libxslt1-dev \
+            liblzma-dev \
+            tk-dev
+          
+          # Install pip and Buildozer
+          python -m pip install --upgrade pip
+          pip install buildozer
 
-    - name: Build APK
-      run: |
-        buildozer -v android debug
+      # Step 4: Install Android SDK, NDK, and Build Tools
+      - name: Install Android SDK and NDK
+        run: |
+          mkdir -p ~/.buildozer/android/platform
+          curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -o cmdline-tools.zip
+          unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/
+          mkdir -p ~/.buildozer/android/platform/cmdline-tools/latest
+          mv ~/.buildozer/android/platform/cmdline-tools/* ~/.buildozer/android/platform/cmdline-tools/latest/
+          yes | ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager --licenses
+          ~/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager \
+            "platform-tools" \
+            "platforms;android-31" \
+            "build-tools;31.0.0" \
+            "ndk;21.3.6528147"
+
+      # Step 5: Build APK using Buildozer
+      - name: Build APK
+        run: |
+          buildozer android debug
+
+      # Step 6: Upload APK as artifact
+      - name: Upload APK as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: android-apk
+          path: bin/*.apk
