--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           python-version: 3.12
 
-      # Step 3: Install Buildozer dependencies
+      # Step 3: Install Buildozer dependencies, including distutils
       - name: Install Buildozer dependencies
         run: |
           sudo apt-get update
@@ -46,8 +46,9 @@ jobs:
             python3-setuptools \
             python3-pip \
             curl \
-            git
-          
+            git \
+            python3-distutils  # Install distutils
+
           # Install pip and Buildozer
           python -m pip install --upgrade pip
           pip install buildozer
