--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,17 +60,20 @@ jobs:
           echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
           echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
 
-      # Step 6: Check for unzip and set PATH
+      # Step 6: Ensure unzip is available
       - name: Check unzip and set PATH
         run: |
-          which unzip || echo "unzip not found"  # Check if unzip is available
-          echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV  # Ensure /usr/bin is in the PATH
+          which unzip || echo "unzip not found"
+          echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
 
       # Step 7: Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
-          packages: 'platform-tools,platforms;android-30,build-tools;30.0.3'
+          packages: |
+            platform-tools
+            platforms;android-30
+            build-tools;30.0.3
           cmdline-tools-version: 12266719
           accept-android-sdk-licenses: true
           log-accepted-android-sdk-licenses: true
@@ -80,21 +83,15 @@ jobs:
       # Step 8: Install Cython and Buildozer
       - name: Install Buildozer and Cython
         run: |
-          python -m pip install cython  # Install Cython, which is missing
-          python -m pip install buildozer  # Install Buildozer
+          python -m pip install cython
+          python -m pip install buildozer
 
-      # Step 9: Retry SDK installation if needed (manual attempt)
-      - name: Retry SDK installation manually
-        run: |
-          sdkmanager --update || echo "SDK manager update failed"
-          sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3" || echo "Manual SDK install failed"
-      
-      # Step 10: Build APK using Buildozer
+      # Step 9: Build APK using Buildozer
       - name: Build APK
         run: |
           buildozer android debug  # Run buildozer to build the APK (adjust flags if needed)
 
-      # Step 11: Upload the generated APK as an artifact
+      # Step 10: Upload the generated APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
