--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,18 +80,24 @@ jobs:
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 8: Install Buildozer and Cython
+      # Step 8: Verify Android SDK installation
+      - name: Verify Android SDK installation
+        run: |
+          echo "Listing installed SDK components"
+          sdkmanager --list
+
+      # Step 9: Install Buildozer and Cython
       - name: Install Buildozer and Cython
         run: |
           python -m pip install cython
           python -m pip install buildozer
 
-      # Step 9: Build APK
+      # Step 10: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 10: Upload APK as an artifact
+      # Step 11: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
