--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,16 @@ on:
 jobs:
   setup_android_sdk:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adoptopenjdk'
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
@@ -32,7 +39,7 @@ jobs:
         run: |
           yes | sdkmanager --licenses
 
-      - name: Install specific SDK components
+      - name: Install SDK packages
         run: |
           sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30"
 
@@ -40,7 +47,28 @@ jobs:
         run: |
           sdkmanager --update
 
-      - name: Run your build commands
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 'stable'
+
+      - name: Install dependencies
         run: |
-          # Add your build commands here (e.g., gradle build)
-          echo "Build process here"
+          flutter doctor
+          flutter pub get
+
+      - name: Run tests
+        run: |
+          flutter test
+
+      - name: Build APK
+        run: |
+          flutter build apk --release
+
+      - name: Upload APK to GitHub Releases
+        uses: gh action/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/app/outputs/flutter-apk/app-release.apk
+          asset_name: app-release.apk
+          asset_content_type: application/vnd.android.package-archive
