--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           which unzip || echo "unzip not found"
           echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
 
-      # Step 7: Set up Android SDK
+      # Step 7: Set up Android SDK (as per your original request)
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
