--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,55 +66,51 @@ jobs:
           which unzip || echo "unzip not found"
           echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
 
-      # Step 7: Set up Android SDK (as per your original request)
+      # Step 7: Set up Android SDK manually
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
-          packages: |
-            platform-tools
-            build-tools;30.0.3
-            platforms;android-30
           cmdline-tools-version: 12266719
           accept-android-sdk-licenses: true
           log-accepted-android-sdk-licenses: true
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 8: Update SDK Manager
-      - name: Update SDK Manager
-        run: sdkmanager --update
+      # Step 8: Install Android SDK components directly using sdkmanager
+      - name: Install Android SDK components
+        run: |
+          sdkmanager --update
+          sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30"
 
       # Step 9: Force Accept SDK licenses
       - name: Accept SDK licenses
-        run: yes | sdkmanager --licenses
+        run: |
+          yes | sdkmanager --licenses
 
-      # Step 10: Install SDK components with HTTP
-      - name: Install SDK components with HTTP
-        run: sdkmanager --no_https "platform-tools" "build-tools;30.0.3" "platforms;android-30"
-
-      # Step 11: Set permissions for SDK folder
+      # Step 10: Set permissions for SDK folder
       - name: Set permissions for SDK folder
         run: |
           sudo chown -R $USER:$USER /usr/local/lib/android/sdk
           sudo chmod -R 755 /usr/local/lib/android/sdk
 
-      # Step 12: Install distutils
-      - name: Install distutils
+      # Step 11: Verify Android SDK installation
+      - name: Verify Android SDK installation
         run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-distutils
+          echo "Listing installed SDK components"
+          sdkmanager --list
 
-      # Step 13: Install Buildozer and Cython
+      # Step 12: Install Buildozer and Cython
       - name: Install Buildozer and Cython
         run: |
           python -m pip install cython
           python -m pip install buildozer
 
-      # Step 14: Build APK
+      # Step 13: Build APK
       - name: Build APK
-        run: buildozer android debug
+        run: |
+          buildozer android debug
 
-      # Step 15: Upload APK as an artifact
+      # Step 14: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
